[tool.poetry]
name = "tgalwaysonline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.36.0"
pyrogram = "^2.0.106"
aiohttp = {extras = ["speedup"], version = "^3.10.4"}
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
